--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "angularfire2": "^5.4.2",
+    "firebase": "^7.14.6",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.5",
