--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@ngrx/store": "^9.2.0",
     "angularfire2": "^5.4.2",
     "firebase": "^7.14.6",
     "hammerjs": "^2.0.8",
